# ADAPT-VQE-BAI

./: .gitignore  .rsyncignore  Code_Checks.md  adapt_vqe_exact.py  adapt_vqe_exact_bai.py  adapt_vqe_exact_bai_expensive.py  adapt_vqe_exact_bai_scipy_minimization.py  adapt_vqe_exact_bai_scipy_minimization_multi_params.py  adapt_vqe_exact_cliques_considered.py  adapt_vqe_exact_estimates.py  adapt_vqe_exact_estimates_speed_up.py  adapt_vqe_qiskit_qubitwise_bai.py  analyze_exact_results.py  analyze_results.py  analyze_results_batch.py  commutator_maps_beh2_14q_4e_140_uccsd.json  commutator_maps_h4_8q_4e_26_uccsd.json  commutator_maps_lih_12q_4e_92_uccsd.json  compare_gradient_methods.py  generate_h5_fermionic_hamiltonian.py  generate_h6_fermionic_hamiltonian.py  get_generator_pool.py  memory_monitor.py  memory_tracker.py  notes.txt  notes_exp.txt  plot_energy_error_vs_measurements.py  plot_energy_error_vs_measurements_5e3.py  pyproject.toml  requirements.txt  requirements_h5_hamiltonian.txt  requirements_test.txt  sparse_energy_calculation.py  submit_all_commands_1.sh  submit_all_commands_10x.sh  submit_individual_jobs.sh  submit_individual_jobs_exact.sh  submit_parameter_sweep_jobs.sh  test_hf_validation.py
adaptvqe/: adapt_vqe_preparation.py
docs/: ADAPT_VQE_BAI_Guide.md  CLUSTER_DEPLOYMENT.md  Hartree_Fock_Validation_Guide.md  README_H5_Hamiltonian.md  UV_USAGE.md
gradient_methods/: __init__.py  anastasiou_gradient.py  notes.md  run_anastasiou_adapt_vqe.py  run_anastasiou_adapt_vqe_with_estimates.py
main_files/: adapt_vqe_exact.py  adapt_vqe_exact_estimates_single_param.py  adapt_vqe_exact_single_param.py  adapt_vqe_exact_single_params.py
operator_pools/: generalized_fermionic_pool.py  qubit_excitation_pool.py  qubit_pool.py
shot-efficient-adapt-vqe/: MEMORY_OPTIMIZATION_README.md  TROUBLESHOOTING_SIGKILL.md  example_h2_memory_test.py  example_h2_minimal.py  example_lih.py  example_lih_memory_optimized.py  (+8 more)
(+24 files in other folders)
