[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adapt-vqe-bai"
version = "0.1.0"
description = "ADAPT-VQE with Bayesian Active Inference for quantum chemistry calculations"
authors = [
    {name = "Rick", email = "rick@example.com"}
]
# readme = "README.md"  # Uncomment when README.md exists
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core quantum chemistry packages
    "openfermion>=1.0.0",
    "openfermionpyscf>=0.5.0",
    "pyscf>=2.0.0",
    
    # Quantum computing frameworks
    "qiskit>=0.40.0",
    "qiskit-aer>=0.12.0",
    
    # Scientific computing
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    
    # Data analysis and visualization
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    
    # Memory monitoring
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/rick/ADAPT-VQE-BAI"
Repository = "https://github.com/rick/ADAPT-VQE-BAI"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.hatch.build.targets.wheel]
packages = ["adaptvqe", "entities", "operator_pools", "utils", "validations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
